fix bug where light mode was not toggling when dark mode is prefer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,253 @@
-@import './base.css';
+/* colors */
+:root {
+  --offwhite: #fffff2;
+  --offblack: #303030;
+  --gold: #ffd700;
+  --dark-goldenrod: #b8860b;
+  --light-hover: #aaa;
+  --dark-hover: #888;
+  --active: #2196f3;
+}
 
-/* #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* semantic color variables for this project */
+:root {
+  --color-background: var(--offwhite);
+  --color-accent: var(--offblack);
+  --color-highlight: var(--gold);
+  --color-dark-highlight: var(--dark-goldenrod);
+  --color-text: var(--black);
+  --color-hover: var(--light-hover);
+  --color-active: var(--active);
+}
 
+[data-theme='dark'] {
+  --color-background: var(--offblack);
+  --color-accent: var(--offwhite);
+  --color-highlight: var(--gold);
+  --color-dark-highlight: var(--dark-goldenrod);
+  --color-text: var(--offwhite);
+  --color-hover: var(--dark-hover);
+  --color-active: var(--active);
+}
+
+/* slider sizes */
+:root {
+  --knobsize: 1em;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-background: var(--offblack);
+    --color-accent: var(--offwhite);
+    --color-highlight: var(--gold);
+    --color-dark-highlight: var(--dark-goldenrod);
+    --color-text: var(--offwhite);
+    --color-hover: var(--dark-hover);
+    --color-active: var(--active);
+  }
+  [data-theme='light'] {
+    --color-background: var(--offwhite);
+    --color-accent: var(--offblack);
+    --color-highlight: var(--gold);
+    --color-dark-highlight: var(--dark-goldenrod);
+    --color-text: var(--black);
+    --color-hover: var(--light-hover);
+    --color-active: var(--active);
+  }
+}
+
+.line {
+  fill: none;
+  stroke: var(--color-accent);
+  stroke-width: 3px;
+}
+
+.node {
+  fill: var(--color-background);
+  stroke: var(--color-accent);
+  stroke-width: 2px;
+}
+
+.arrow {
+  fill: var(--color-accent);
+  stroke: var(--color-background);
+  stroke-width: 2px;
+}
+
+.text {
+  font-weight: bold;
+  font-family: Helvetica, sans-serif;
+  font-size: 8px;
+  text-anchor: middle;
+  fill: var(--color-accent);
+}
+
+.line-select {
+  stroke: var(--color-dark-highlight) !important;
+  stroke-width: 5px !important;
+}
+
+.node-select {
+  stroke: var(--color-highlight) !important;
+  stroke-width: 5px !important;
+}
+
+.arrow-select {
+  fill: var(--color-dark-highlight) !important;
+  stroke: var(--color-highlight) !important;
+}
+
+.active {
+  z-index: 999 !important;
+}
+
+/* container with text and slider */
+.toggle-container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 2em;
+}
+
+/* slider container */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: calc(var(--knobsize) * 2.3);
+  height: calc(var(--knobsize) * 1.3);
+}
+
+/* hide default checkbox styling */
+.switch input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+/* slider background */
+.switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: calc(var(--knobsize) * 1.3);
+}
+
+/* slider knob */
+.slider:before {
+  position: absolute;
+  content: '';
+  height: calc(var(--knobsize));
+  width: calc(var(--knobsize));
+  left: calc(var(--knobsize) / 6.5);
+  bottom: calc(var(--knobsize) / 6.5);
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(--color-active);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(calc(var(--knobsize)));
+  -ms-transform: translateX(calc(var(--knobsize)));
+  transform: translateX(calc(var(--knobsize)));
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--color-active);
+}
+
+.active-color {
+  background-color: var(--color-active) !important;
+}
+
+.graph-button-input {
+  text-align: center;
+  width: 3em;
+  height: 1.875em;
+  background-color: transparent;
+  border: 1px solid var(--color-accent);
+  color: var(--color-text);
+}
+
+.graph-button {
+  background-color: transparent;
+  border: 1px solid var(--color-accent);
+  color: var(--color-text);
+  cursor: pointer;
+  width: 1.5em;
+  height: 1.875em;
+}
+
+.graph-button:hover {
+  background-color: var(--color-hover);
+}
+
+.graph-button-minus {
+  border-radius: 25% 0 0 25%;
+}
+
+.graph-button-plus {
+  border-radius: 0 25% 25% 0;
+}
+
+@media only screen and (min-width: 480px) {
+  .graph-button-input {
+    width: 4em;
+    height: 2.5em;
+  }
+  .graph-button {
+    width: 2em;
+    height: 2.5em;
+  }
+}
+
+select {
+  background-color: var(--color-background);
+  color: var(--color-text);
+  height: 2em;
+  border: 1px solid var(--color-accent);
+  cursor: pointer;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+body {
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  line-height: 1.6;
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-} */
